chore: add Spotless auto-formatter with google-java-format AOSP
Integrate Spotless Gradle plugin (8.4.0) to enforce consistent
code formatting across the project.

Configuration:
- Java: googleJavaFormat().aosp().reflowLongStrings().skipJavadocFormatting()
  (AOSP = 4-space indent, 100-char line limit, matches existing style)
- Misc: trimTrailingWhitespace + leadingTabsToSpaces + endWithNewline
  for *.gradle, *.xml, *.yml, *.yaml, *.properties files

Modules: api, application (+ root build.gradle for misc formats)
Tasks: spotlessCheck (verify), spotlessApply (auto-fix)
Fully compatible with existing Checkstyle (Google Style)