@@ -31,12 +31,9 @@ import reactor.test.StepVerifier;
 @ExtendWith(MockitoExtension.class)
 class DefaultExternalLinkProcessorTest {
 
-    @Mock
-    private ExternalUrlSupplier externalUrlSupplier;
+    @Mock private ExternalUrlSupplier externalUrlSupplier;
 
-    @InjectMocks
-    DefaultExternalLinkProcessor externalLinkProcessor;
-
+    @InjectMocks DefaultExternalLinkProcessor externalLinkProcessor;
 
     @Test
     void processWhenLinkIsEmpty() {
@@ -53,73 +50,81 @@ class DefaultExternalLinkProcessorTest {
         assertThat(externalLinkProcessor.processLink("/test")).isEqualTo("https://halo.run/test");
 
         assertThat(externalLinkProcessor.processLink("https://guqing.xyz/test"))
-            .isEqualTo("https://guqing.xyz/test");
+                .isEqualTo("https://guqing.xyz/test");
 
         when(externalUrlSupplier.getRaw()).thenReturn(URI.create("https://halo.run/").toURL());
         assertThat(externalLinkProcessor.processLink("/test")).isEqualTo("https://halo.run/test");
         assertThat(externalLinkProcessor.processLink("https://halo.run/test"))
-            .isEqualTo("https://halo.run/test");
+                .isEqualTo("https://halo.run/test");
     }
 
     @ParameterizedTest
     @MethodSource("processUriTestWithoutServerWebExchangeArguments")
     void processUriWithoutServerWebExchange(String link, String expectedLink)
-        throws MalformedURLException {
-        lenient().when(externalUrlSupplier.getRaw())
-            .thenReturn(new URL("https://www.halo.run/context-path"));
-        externalLinkProcessor.processLink(URI.create(link))
-            .as(StepVerifier::create)
-            .expectNext(URI.create(expectedLink))
-            .verifyComplete();
+            throws MalformedURLException {
+        lenient()
+                .when(externalUrlSupplier.getRaw())
+                .thenReturn(new URL("https://www.halo.run/context-path"));
+        externalLinkProcessor
+                .processLink(URI.create(link))
+                .as(StepVerifier::create)
+                .expectNext(URI.create(expectedLink))
+                .verifyComplete();
     }
 
     static Stream<Arguments> processUriTestWithoutServerWebExchangeArguments() {
         return Stream.of(
-            Arguments.of("http://localhost:8090/halo", "http://localhost:8090/halo"),
-            Arguments.of("/halo", "https://www.halo.run/context-path/halo"),
-            Arguments.of("halo", "https://www.halo.run/context-path/halo"),
-            Arguments.of("/halo?query", "https://www.halo.run/context-path/halo?query"),
-            Arguments.of(
-                "/halo?query#fragment", "https://www.halo.run/context-path/halo?query#fragment"
-            ),
-            Arguments.of("/halo/subpath", "https://www.halo.run/context-path/halo/subpath"),
-            Arguments.of("/halo/中文", "https://www.halo.run/context-path/halo/%E4%B8%AD%E6%96%87"),
-            Arguments.of("/halo/ooo%2Fooo", "https://www.halo.run/context-path/halo/ooo%2Fooo")
-        );
+                Arguments.of("http://localhost:8090/halo", "http://localhost:8090/halo"),
+                Arguments.of("/halo", "https://www.halo.run/context-path/halo"),
+                Arguments.of("halo", "https://www.halo.run/context-path/halo"),
+                Arguments.of("/halo?query", "https://www.halo.run/context-path/halo?query"),
+                Arguments.of(
+                        "/halo?query#fragment",
+                        "https://www.halo.run/context-path/halo?query#fragment"),
+                Arguments.of("/halo/subpath", "https://www.halo.run/context-path/halo/subpath"),
+                Arguments.of(
+                        "/halo/中文", "https://www.halo.run/context-path/halo/%E4%B8%AD%E6%96%87"),
+                Arguments.of(
+                        "/halo/ooo%2Fooo", "https://www.halo.run/context-path/halo/ooo%2Fooo"));
     }
 
     @ParameterizedTest
     @MethodSource("processUriTestWithServerWebExchangeArguments")
     void processUriWithServerWebExchange(String link, String expectLink)
-        throws MalformedURLException {
-        lenient().when(externalUrlSupplier.getRaw())
-            .thenReturn(URI.create("https://www.halo.run").toURL());
+            throws MalformedURLException {
+        lenient()
+                .when(externalUrlSupplier.getRaw())
+                .thenReturn(URI.create("https://www.halo.run").toURL());
         var request = mock(ServerHttpRequest.class);
         var exchange = mock(ServerWebExchange.class);
         lenient().when(exchange.getRequest()).thenReturn(request);
-        lenient().when(externalUrlSupplier.getURL(request)).thenReturn(
-            new URL("https://antoher.halo.run/context-path"));
-        externalLinkProcessor.processLink(URI.create(link))
-            .contextWrite(context -> context.put(EXCHANGE_CONTEXT_ATTRIBUTE, exchange))
-            .as(StepVerifier::create)
-            .expectNext(URI.create(expectLink))
-            .verifyComplete();
+        lenient()
+                .when(externalUrlSupplier.getURL(request))
+                .thenReturn(new URL("https://antoher.halo.run/context-path"));
+        externalLinkProcessor
+                .processLink(URI.create(link))
+                .contextWrite(context -> context.put(EXCHANGE_CONTEXT_ATTRIBUTE, exchange))
+                .as(StepVerifier::create)
+                .expectNext(URI.create(expectLink))
+                .verifyComplete();
     }
 
     static Stream<Arguments> processUriTestWithServerWebExchangeArguments() {
         return Stream.of(
-            Arguments.of("http://localhost:8090/halo?query#fragment",
-                "http://localhost:8090/halo?query#fragment"),
-            Arguments.of("/halo", "https://antoher.halo.run/context-path/halo"),
-            Arguments.of("halo", "https://antoher.halo.run/context-path/halo"),
-            Arguments.of("/halo?query", "https://antoher.halo.run/context-path/halo?query"),
-            Arguments.of("/halo?query#fragment",
-                "https://antoher.halo.run/context-path/halo?query#fragment"),
-            Arguments.of("/halo/subpath", "https://antoher.halo.run/context-path/halo/subpath"),
-            Arguments.of("/halo/中文",
-                "https://antoher.halo.run/context-path/halo/%E4%B8%AD%E6%96%87"),
-            Arguments.of("/halo/ooo%2Fooo", "https://antoher.halo.run/context-path/halo/ooo%2Fooo")
-        );
+                Arguments.of(
+                        "http://localhost:8090/halo?query#fragment",
+                        "http://localhost:8090/halo?query#fragment"),
+                Arguments.of("/halo", "https://antoher.halo.run/context-path/halo"),
+                Arguments.of("halo", "https://antoher.halo.run/context-path/halo"),
+                Arguments.of("/halo?query", "https://antoher.halo.run/context-path/halo?query"),
+                Arguments.of(
+                        "/halo?query#fragment",
+                        "https://antoher.halo.run/context-path/halo?query#fragment"),
+                Arguments.of("/halo/subpath", "https://antoher.halo.run/context-path/halo/subpath"),
+                Arguments.of(
+                        "/halo/中文",
+                        "https://antoher.halo.run/context-path/halo/%E4%B8%AD%E6%96%87"),
+                Arguments.of(
+                        "/halo/ooo%2Fooo", "https://antoher.halo.run/context-path/halo/ooo%2Fooo"));
     }
-
 }
